--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,13 @@ buildscript {
     repositories {
         mavenCentral()
     }
-
     dependencies {
         classpath 'com.android.tools.build:gradle:0.7.+'
     }
 }
 
-apply plugin: 'android-library'
-
-android {
-    compileSdkVersion 18
-    buildToolsVersion '19.0.1'
-
-    sourceSets {
-        main {
-            manifest.srcFile 'AndroidManifest.xml'
-            java.srcDirs = ['src']
-            res.srcDirs = ['res']
-        }
+allprojects {
+    repositories {
+        mavenCentral()
     }
 }
