--- a/GraphTest/build.gradle
+++ b/GraphTest/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 18
-    buildToolsVersion "19.0.1"
+    buildToolsVersion '19.0.1'
 
     defaultConfig {
         minSdkVersion 7
-        targetSdkVersion 16
+        targetSdkVersion 18
         versionCode 1
         versionName "1.0"
     }
@@ -15,4 +15,5 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:+'
     compile 'com.android.support:appcompat-v7:+'
+    debugCompile project(':GraphViewLibrary')
 }
