--- a/GraphTest/src/main/AndroidManifest.xml
+++ b/GraphTest/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="sensorLandscape"
             android:name="net.cobryis.test.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
