--- a/GraphTest/build.gradle
+++ b/GraphTest/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 18
-    buildToolsVersion '19.0.1'
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
         minSdkVersion 7
@@ -13,7 +13,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:support-v4:18.+'
+    compile 'com.android.support:appcompat-v7:18.+'
     debugCompile project(':GraphViewLibrary')
 }
